--- a/assets/style.css
+++ b/assets/style.css
@@ -8,3 +8,8 @@ h1 {
     flex-direction: row;
     justify-content: space-around;
 }
+
+.aboutme-container {
+    padding-left: 4em;
+    padding-right: 4em;
+}
